# Python-Project

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml
src/: README.md  entrypoint.sh  logger.py  main.py
src/data_base/: models.py  session_manager.py
src/documents/: models.py  repositories.py  services.py
src/projects/: models.py
src/users/: models.py  repositories.py  router.py  schemas.py  services.py
